Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBoolObjRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Boolean> yoda
        Boolean y = yoda:useForce(true, true)
        output "passed"
     end
end
