Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriBoolObjRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Boolean> yoda
        boolean y = yoda(true, true, true)
     end
end
